@@ -12,6 +12,9 @@ this in the postgresql log a day:
         root@root DETAIL:  Role "root" does not exist.
 If no username option is set, monit will keep using the hardcoded credentials (for backward compatibility).
 
+New: Issue #974: Monit CLI: Add support for the '-g' option to the 'report' command. Example:
+        monit -g database report
+
 Fixed: Issue #991: MacOS: Monit didn't compile on MacOS 10.13 or older, as mount flags that were added in Monit 5.28.1
 were not defined. Thanks to Lutz Mader.
 
